--- a/src/components/App/style.scss
+++ b/src/components/App/style.scss
@@ -1,10 +1,13 @@
 .app {
-  text-align: center; }
+  text-align: center;
+}
 
 .app-header {
   background-color: #222;
   padding: 20px;
-  color: white; }
+  color: white;
+}
 
 .app-title {
-  font-size: 1.5em; }
+  font-size: 1.5em;
+}
