--- a/src/components/App/style.scss
+++ b/src/components/App/style.scss
@@ -11,3 +11,15 @@
 .app-title {
   font-size: 1.5em;
 }
+
+.gallery-section {
+  display: flex;
+  justify-content: center;
+}
+
+.gallery-image {
+  margin: 12px;
+  &:hover {
+    cursor: pointer;
+  }
+}
