--- a/src/components/App/style.css
+++ b/src/components/App/style.css
@@ -1,5 +1,6 @@
 .app {
-  text-align: center; }
+  text-align: center;
+  font-family: 'Open Sans', sans-serif; }
 
 .app-header {
   background-color: #222;
