on click send to repository page

--- a/src/components/App/style.scss
+++ b/src/components/App/style.scss
@@ -1,3 +1,7 @@
+button:focus {
+  outline: none;
+}
+
 .app {
   text-align: center;
   font-family: 'Open Sans', sans-serif;
@@ -91,4 +95,9 @@
   background: none;
   border: #a6cbd8 2px solid;
   color: #758e96;
+  &:hover {
+    background: #0696a5;
+    color: #f5f5f5;
+    cursor: pointer;
+  }
 }
