--- a/src/components/App/style.scss
+++ b/src/components/App/style.scss
@@ -73,19 +73,20 @@ button:focus {
 }
 
 .react-icon {
-  width: 60px
+  width: 60px;
 }
 
 .router-icon {
-  width: 70px
+  width: 70px;
 }
 
 .sass-icon {
-  width: 65px
+  width: 65px;
+  margin: 0 10px 0 20px;
 }
 
 .git-icon {
-  width: 90px
+  width: 90px;
 }
 
 .repository-button {
