--- a/src/components/App/style.css
+++ b/src/components/App/style.css
@@ -16,7 +16,7 @@ button:focus {
 .page-title {
   color: #222222;
   border: 2px #adacac solid;
-  width: 500px;
+  width: 350px;
   margin: 0 auto 50px;
   padding: 30px;
   font-size: 27px;
@@ -24,6 +24,9 @@ button:focus {
 
 .page-title-second-line {
   margin: 0; }
+
+.page-title-long {
+  width: 500px; }
 
 .page-menu {
   height: 50px;
@@ -95,15 +98,15 @@ button:focus {
   font-size: 17px;
   background: none;
   border: #a6cbd8 2px solid;
-  color: #758e96; }
+  color: #758e96;
+  margin-bottom: 30px; }
   .repository-button:hover {
     background: #0696a5;
     color: #f5f5f5;
     cursor: pointer; }
 
 .repository-button-left {
-  margin-right: 20px;
-  margin-bottom: 30px; }
+  margin-right: 20px; }
 
 .repository-button-right {
   margin-left: 20px; }
