--- a/src/components/App/style.scss
+++ b/src/components/App/style.scss
@@ -63,6 +63,25 @@ button:focus {
   margin: 20px auto;
 }
 
+.project-description {
+  width: 80%;
+  margin: 0 auto 10px;
+}
+
+.paragraph-title {
+  text-align: left;
+  color: #222222;
+  font-size: 30px;
+  font-weight: 600;
+}
+
+.page-paragraph {
+  text-align: left;
+  color: #222222;
+  font-size: 20px;
+  font-weight: 500;
+}
+
 .gallery-section {
   display: flex;
   flex-wrap: wrap;
