--- a/src/components/App/style.scss
+++ b/src/components/App/style.scss
@@ -51,8 +51,13 @@ button:focus {
 }
 
 .nav {
+  color: #e8e8e8;
   padding: 14px 25px;
   text-decoration: none;
+}
+
+.active {
+  color: #9df6ff;
 }
 
 .project-section {
