--- a/src/components/App/style.scss
+++ b/src/components/App/style.scss
@@ -14,7 +14,10 @@ button:focus {
 }
 
 .app-title {
-  font-size: 1.5em;
+  margin: 0;
+  float: left;
+  font-size: 18px;
+  font-weight: 600;
 }
 
 .page-title {
@@ -25,6 +28,22 @@ button:focus {
   padding: 30px;
   font-size: 27px;
   font-weight: 300;
+}
+
+.main-page-title {
+  color: #222222;
+  width: 350px;
+  margin: 10px auto;
+  padding: 30px 30px 10px 30px;
+  font-size: 27px;
+  font-weight: 400;
+}
+
+.main-page-project-title {
+  text-align: right;
+  margin-right: 15px;
+  font-size: 17px;
+  font-weight: 400;
 }
 
 .page-title-second-line {
@@ -40,7 +59,7 @@ button:focus {
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  background: #e0e0e0;
+  background: #f3f2f2;
   .nav {
     color: #828181;
   }
@@ -61,7 +80,7 @@ button:focus {
 }
 
 .project-section {
-  background: #e0e0e0;
+  background: #f3f2f2;
   width: 90%;
   padding: 40px;
   border: 1px #adacac solid;
@@ -91,6 +110,11 @@ button:focus {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+}
+
+.gallery-article {
+  background: #f3f2f2;
+  margin: 20px;
 }
 
 .gallery-image {
