--- a/src/components/App/style.scss
+++ b/src/components/App/style.scss
@@ -8,6 +8,9 @@ button:focus {
 }
 
 .app-header {
+  width: 100vw;
+  z-index: 1;
+  position: fixed;
   background-color: #222;
   padding: 20px;
   color: white;
@@ -23,7 +26,9 @@ button:focus {
 .page-title {
   color: #222222;
   border: 2px #adacac solid;
-  width: 350px;
+  border-left: 0;
+  border-right: 0;
+  width: 300px;
   margin: 0 auto 50px;
   padding: 30px;
   font-size: 27px;
@@ -33,8 +38,9 @@ button:focus {
 .main-page-title {
   color: #222222;
   width: 350px;
-  margin: 10px auto;
-  padding: 30px 30px 10px 30px;
+  // margin: 10px auto;
+  margin: 0;
+  padding: 180px 30px 10px 30px;
   font-size: 27px;
   font-weight: 400;
 }
@@ -55,13 +61,18 @@ button:focus {
 }
 
 .page-menu {
+  position: fixed;
+  padding-top: 64px;
+  width: 100vw;
   height: 50px;
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  background: #f3f2f2;
+  // background: #f3f2f2;
+  background: #504f4f;
   .nav {
-    color: #828181;
+    // color: #828181;
+    color: #a3a3a3;
   }
   .active {
     background: #c7c7c7;
@@ -131,6 +142,8 @@ button:focus {
   height: 100px;
   padding-right: 30px;
   margin-bottom: 60px;
+  padding-top: 115px;
+
 }
 
 .technology-icon {
