complete batman page

--- a/src/components/App/style.scss
+++ b/src/components/App/style.scss
@@ -98,6 +98,10 @@ button:focus {
   margin: 20px auto;
 }
 
+.project-section-two {
+  background: #222222;
+}
+
 .project-description {
   width: 80%;
   margin: 0 auto 10px;
@@ -110,11 +114,19 @@ button:focus {
   font-weight: 600;
 }
 
+.paragraph-title-two {
+  color: #e5e3d1;
+}
+
 .page-paragraph {
   text-align: left;
   color: #222222;
   font-size: 20px;
   font-weight: 500;
+}
+
+.page-paragraph-two {
+  color: #a9a9a9;
 }
 
 .gallery-section {
