--- a/src/components/DesignPages/Welcome/style.css
+++ b/src/components/DesignPages/Welcome/style.css
@@ -5,7 +5,7 @@
   width: 540px; }
 
 .batman-image {
-  background-image: url("https://github.com/JorgeEdPerezGa/hyperspace/raw/master/public/screenshots/1.png"); }
+  background-image: url("../../../assets/design/batman/batman-cover.svg"); }
 
 @media screen and (max-width: 400px) {
   .hyperspace-image, .headcount-image, .movie-tracker-image {
