--- a/src/components/DesignPages/Welcome/style.scss
+++ b/src/components/DesignPages/Welcome/style.scss
@@ -6,7 +6,7 @@
 }
 
 .batman-image {
-  background-image: url('https://github.com/JorgeEdPerezGa/hyperspace/raw/master/public/screenshots/1.png');
+  background-image: url('../../../assets/design/batman/batman-cover.svg');
 }
 
 
