--- a/src/components/DesignPages/ComprehensiveLayoutOne/style.css
+++ b/src/components/DesignPages/ComprehensiveLayoutOne/style.css
@@ -1,11 +1,18 @@
 .batman-icon-set-article {
   display: flex;
+  margin: auto;
   flex-wrap: wrap;
   justify-content: center; }
 
 .batman-web-screenshot {
-  width: 100%; }
+  width: 80%;
+  margin-top: 50px;
+  border: 1px #404040 solid; }
 
 .batman-icon {
-  width: 400px;
-  height: 400px; }
+  width: 33%;
+  height: 33%; }
+
+.batman-icon-batman {
+  width: 50%;
+  margin-right: auto; }
