add weatherly project

--- a/src/components/App/style.scss
+++ b/src/components/App/style.scss
@@ -151,6 +151,7 @@ button:focus {
   background: #c7c7c7;
   display: flex;
   justify-content: flex-end;
+  align-items: center;
   height: 100px;
   padding-right: 30px;
   margin-bottom: 60px;
