--- a/src/components/App/style.scss
+++ b/src/components/App/style.scss
@@ -1,3 +1,7 @@
+a {
+  text-decoration: none;
+}
+
 button:focus {
   outline: none;
 }
@@ -33,6 +37,12 @@ button:focus {
   padding: 30px;
   font-size: 27px;
   font-weight: 300;
+}
+
+.page-title-contact {
+  color: #adacac;
+  width: 360px;
+  margin: -10px auto 60px;
 }
 
 .main-page-title {
