--- a/src/components/Contact/style.scss
+++ b/src/components/Contact/style.scss
@@ -1,19 +1,55 @@
+.contact {
+  height: 100vh;
+  background: #3a3939;
+}
+
+.contact-left {
+  padding-top: 60px;
+}
+
 .contact-icon-and-info {
-  background: #292929;
+  width: 370px;
+  margin: 20px auto 50px;
+  background: #222222;
+  height: 40px;
   display: flex;
-  width: 340px;
-  margin: 30px;
+  align-items: center;
+  justify-content: space-between;
   padding: 20px;
+  border: 5px solid #585858;
+}
+
+.contact-button {
+  width: 420px;
+  font-size: 18px;
+  text-align: center;
+  margin: 20px auto 50px;
+  background: #afaeae;
+  color: #222222;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  border: none;
+  &:hover {
+    cursor: pointer;
+    background: #f5f5f5;
+  }
 }
 
 .contact-icon {
-  width: 70px;
-  margin-left: 40px;
+  width: 80px;
+  margin-top: -50px;
+  margin-left: 0px;
+}
+
+.email-icon {
+  margin-left: 20px;
 }
 
 .contact-info {
   color: #cacaca;
-  margin: 65px 45px 65px;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 300;
+  margin-left: 20px;
 }
