--- a/src/components/App/style.css
+++ b/src/components/App/style.css
@@ -13,6 +13,7 @@ button:focus {
   z-index: 1;
   position: fixed;
   background-color: #222;
+  background: #191919;
   padding: 20px;
   color: white; }
 
