--- a/src/components/App/style.scss
+++ b/src/components/App/style.scss
@@ -16,6 +16,7 @@ button:focus {
   z-index: 1;
   position: fixed;
   background-color: #222;
+  background: #191919;  
   padding: 20px;
   color: white;
 }
